fixed font awesome icons not showing

--- a/css/style.css
+++ b/css/style.css
@@ -173,20 +173,20 @@ header {
 }
 
 .carve-1::before {
-  background-image: url(images/bg-section-top-desktop-1.svg);
+  background-image: url(../images/bg-section-top-desktop-1.svg);
 }
 
 .carve-1::after {
-  background-image: url(images/bg-section-bottom-desktop-1.svg);
+  background-image: url(../images/bg-section-bottom-desktop-1.svg);
 }
 
 
 .carve-2::before {
-  background-image: url(images/bg-section-top-desktop-2.svg);
+  background-image: url(../images/bg-section-top-desktop-2.svg);
 }
 
 .carve-2::after {
-  background-image: url(images/bg-section-bottom-desktop-2.svg);
+  background-image: url(../images/bg-section-bottom-desktop-2.svg);
 }
 
 .illustration > article.no-carve {
@@ -236,20 +236,20 @@ header {
   }
 
   .carve-1::before {
-    background-image: url(images/bg-section-top-mobile-1.svg);
+    background-image: url(../images/bg-section-top-mobile-1.svg);
   }
 
   .carve-1::after {
-    background-image: url(images/bg-section-bottom-mobile-1.svg);
+    background-image: url(../images/bg-section-bottom-mobile-1.svg);
   }
 
 
   .carve-2::before {
-    background-image: url(images/bg-section-top-mobile-2.svg);
+    background-image: url(../images/bg-section-top-mobile-2.svg);
   }
 
   .carve-2::after {
-    background-image: url(images/bg-section-bottom-mobile-2.svg);
+    background-image: url(../images/bg-section-bottom-mobile-2.svg);
   }
 }
 
@@ -276,12 +276,12 @@ footer::before {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom left;
-  background-image: url(images/bg-footer-top-desktop.svg);
+  background-image: url(../images/bg-footer-top-desktop.svg);
 }
 
 @media (max-width :767px) {
   footer::before {
-    background-image: url(images/bg-footer-top-mobile.svg);
+    background-image: url(../images/bg-footer-top-mobile.svg);
   }
 }
 
